--- a/public/sound/README
+++ b/public/sound/README
@@ -27,7 +27,13 @@ Errors
     sentences: “We planted some rosebushes” needs to be “We’ve planted some rosebushes” in the male voice
   lesson_11: “My room is cool in the summer” needs to be “My room is cool in summer” in the female voice
   lesson_12: “Will you please make the bed” needs to be “Will you make the bed” in the female voice
+  lesson 14: “I go to church on the corner” needs to be “I go to the church on the corner” in the female voice
 
 Notes
   Add numbers (0, 1, 2, 3, 4, 5, 6 … 1000) to SB custom CMU pronouncing dictionary
   Possibly: add field for alternative answers to db and form for user alternative answer suggestions/submissions on app pages
+  lesson_14
+    sentences: 
+      “The policeman searched for the car” sounds like “The policemen searched for the car” 
+      sentences 15, 16, and 17 were mismatched between the male and female versions
+   
