--- a/public/sound/README
+++ b/public/sound/README
@@ -9,6 +9,8 @@ Missing files
     sentences: Where is the bus stop?
   lesson_16
     sentences: Father broke a dish.
+  lesson_19
+    words: mouse, mice, moose, town, ten, turn, hound, hand, hind
 
 Soft sounding files
   lesson_4
