Corrected typo in README

--- a/public/sound/README
+++ b/public/sound/README
@@ -47,8 +47,8 @@ Sound issues
       wade_f, whale_f, wheel_f, white_f, wide_f have some metallic feedback
   lesson_25
     words: am_m sounds soft
-  lesson_25:
-    words: harry_f and harry_m pronounced somewhat differently (note not problem)
+  lesson_26:
+    words: Harry_f and Harry_m pronounced somewhat differently (note not problem)
     
 
 Errors
