--- a/public/sound/README
+++ b/public/sound/README
@@ -18,6 +18,8 @@ Missing files
     sentences: “Throw the ball to me.”, “I painted the bookcase blue.”, “Where shall we put the bookcase?”
   lesson_23
     words: landlady
+  lesson_27
+    sentences: “The boy is ten years old.”, “There were ten people at the meeting.”
 
 
 Sound issues
