Updated missing words list. Changed compound word file names to match Whitehurst spacing

--- a/public/sound/README
+++ b/public/sound/README
@@ -6,27 +6,28 @@ Missing files
   lesson_8
     sentences: I saw the ball game.
   lesson_9 
+  lesson
     sentences: Where is the bus stop?
   lesson_16
     sentences: Father broke a dish.
   lesson_19
-    words: mouse, mice, moose, town, ten, turn, hound, hand, hind
+    words: mice, town, hound, hind
   lesson_21
     sentences: “This pencil has a sharp point.” in the female voice
   lesson_22
-    words: blackboard, goodbye, bookcase, pancakes, park
+    words: bookcase, pancakes, park
     sentences: “Throw the ball to me.”, “I painted the bookcase blue.”, “Where shall we put the bookcase?”
   lesson_23
     words: landlady
   lesson_27
     sentences: “The boy is ten years old.”, “There were ten people at the meeting.”
-  lesson_29
-    words: where_f, boot_m
+  lesson_30
+    words: wreathe (had recorded wreath instead)
   lesson_31
-    words: name_m, wane_m
+    words: name_m
     sentences: “We went to the movies last night” in the female voice
   lesson_34
-    words: forgave
+    words: forgave (had recorded forgive instead)
 
 
 Sound issues
